# cool_algorithms

./: README.md  pyproject.toml
src/: algorithms.py
