[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Interesting algorithms that are worthwhile understand and implement"
authors = ["Luciano <lcsjr70@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
